evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_writebatch_delete_range(
        b: *mut rocksdb_writebatch_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        end_key: *const ::std::os::raw::c_char,
        end_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_delete_range_cf(
        b: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        end_key: *const ::std::os::raw::c_char,
        end_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_delete_rangev(
        b: *mut rocksdb_writebatch_t,
        num_keys: ::std::os::raw::c_int,
        start_keys_list: *const *const ::std::os::raw::c_char,
        start_keys_list_sizes: *const usize,
        end_keys_list: *const *const ::std::os::raw::c_char,
        end_keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_delete_rangev_cf(
        b: *mut rocksdb_writebatch_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        start_keys_list: *const *const ::std::os::raw::c_char,
        start_keys_list_sizes: *const usize,
        end_keys_list: *const *const ::std::os::raw::c_char,
        end_keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_put_log_data(
        arg1: *mut rocksdb_writebatch_t,
        blob: *const ::std::os::raw::c_char,
        len: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_iterate(
        arg1: *mut rocksdb_writebatch_t,
        state: *mut ::std::os::raw::c_void,
        put: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                k: *const ::std::os::raw::c_char,
                klen: usize,
                v: *const ::std::os::raw::c_char,
                vlen: usize,
            ),
        >,
        deleted: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                k: *const ::std::os::raw::c_char,
                klen: usize,
            ),
        >,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_data(
        arg1: *mut rocksdb_writebatch_t,
        size: *mut usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_writebatch_set_save_point(arg1: *mut rocksdb_writebatch_t);
}
extern "C" {
    pub fn rocksdb_writebatch_rollback_to_save_point(
        arg1: *mut rocksdb_writebatch_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_pop_save_point(
        arg1: *mut rocksdb_writebatch_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_create(
        reserved_bytes: usize,
        overwrite_keys: ::std::os::raw::c_uchar,
    ) -> *mut rocksdb_writebatch_wi_t;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_create_from(
        rep: *const ::std::os::raw::c_char,
        size: usize,
    ) -> *mut rocksdb_writebatch_wi_t;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_destroy(arg1: *mut rocksdb_writebatch_wi_t);
}
extern "C" {
    pub fn rocksdb_writebatch_wi_clear(arg1: *mut rocksdb_writebatch_wi_t);
}
extern "C" {
    pub fn rocksdb_writebatch_wi_count(b: *mut rocksdb_writebatch_wi_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_put(
        arg1: *mut rocksdb_writebatch_wi_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_put_cf(
        arg1: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_putv(
        b: *mut rocksdb_writebatch_wi_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_putv_cf(
        b: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_merge(
        arg1: *mut rocksdb_writebatch_wi_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_merge_cf(
        arg1: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
        val: *const ::std::os::raw::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_mergev(
        b: *mut rocksdb_writebatch_wi_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_mergev_cf(
        b: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        num_values: ::std::os::raw::c_int,
        values_list: *const *const ::std::os::raw::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_delete(
        arg1: *mut rocksdb_writebatch_wi_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_singledelete(
        arg1: *mut rocksdb_writebatch_wi_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_delete_cf(
        arg1: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_singledelete_cf(
        arg1: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_deletev(
        b: *mut rocksdb_writebatch_wi_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_deletev_cf(
        b: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_delete_range(
        b: *mut rocksdb_writebatch_wi_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        end_key: *const ::std::os::raw::c_char,
        end_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_delete_range_cf(
        b: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        end_key: *const ::std::os::raw::c_char,
        end_key_len: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_delete_rangev(
        b: *mut rocksdb_writebatch_wi_t,
        num_keys: ::std::os::raw::c_int,
        start_keys_list: *const *const ::std::os::raw::c_char,
        start_keys_list_sizes: *const usize,
        end_keys_list: *const *const ::std::os::raw::c_char,
        end_keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_delete_rangev_cf(
        b: *mut rocksdb_writebatch_wi_t,
        column_family: *mut rocksdb_column_family_handle_t,
        num_keys: ::std::os::raw::c_int,
        start_keys_list: *const *const ::std::os::raw::c_char,
        start_keys_list_sizes: *const usize,
        end_keys_list: *const *const ::std::os::raw::c_char,
        end_keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_put_log_data(
        arg1: *mut rocksdb_writebatch_wi_t,
        blob: *const ::std::os::raw::c_char,
        len: usize,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_iterate(
        b: *mut rocksdb_writebatch_wi_t,
        state: *mut ::std::os::raw::c_void,
        put: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                k: *const ::std::os::raw::c_char,
                klen: usize,
                v: *const ::std::os::raw::c_char,
                vlen: usize,
            ),
        >,
        deleted: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                k: *const ::std::os::raw::c_char,
                klen: usize,
            ),
        >,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_data(
        b: *mut rocksdb_writebatch_wi_t,
        size: *mut usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_set_save_point(arg1: *mut rocksdb_writebatch_wi_t);
}
extern "C" {
    pub fn rocksdb_writebatch_wi_rollback_to_save_point(
        arg1: *mut rocksdb_writebatch_wi_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_writebatch_wi_get_from_batch(
        wbwi: *mut rocksdb_writebatch_wi_t,
        options: *const rocksdb_options_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_get_from_batch_cf(
        wbwi: *mut rocksdb_writebatch_wi_t,
        options: *const rocksdb_options_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_get_from_batch_and_db(
        wbwi: *mut rocksdb_writebatch_wi_t,
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_writebatch_wi_get_from_batch_and_db_cf(
        wbwi: *mut rocksdb_writebatch_wi_t,
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_write_writebatch_wi(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        wbwi: *mut rocksdb_writebatch_wi_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
